Removed unnecessary items
