# src/Controllers/DrinkController.js
@@ -1,41 +1,0 @@
-"use strict";
-var __decorate = (this && this.__decorate) || function (decorators, target, key, desc) {
-    var c = arguments.length, r = c < 3 ? target : desc === null ? desc = Object.getOwnPropertyDescriptor(target, key) : desc, d;
-    if (typeof Reflect === "object" && typeof Reflect.decorate === "function") r = Reflect.decorate(decorators, target, key, desc);
-    else for (var i = decorators.length - 1; i >= 0; i--) if (d = decorators[i]) r = (c < 3 ? d(r) : c > 3 ? d(target, key, r) : d(target, key)) || r;
-    return c > 3 && r && Object.defineProperty(target, key, r), r;
-};
-var __metadata = (this && this.__metadata) || function (k, v) {
-    if (typeof Reflect === "object" && typeof Reflect.metadata === "function") return Reflect.metadata(k, v);
-};
-var __param = (this && this.__param) || function (paramIndex, decorator) {
-    return function (target, key) { decorator(target, key, paramIndex); }
-};
-Object.defineProperty(exports, "__esModule", { value: true });
-const tsoa_1 = require("tsoa");
-const DrinkModel_1 = require("../Models/DrinkModel");
-let DrinkController = class DrinkController {
-    async create(body) {
-        const data = new DrinkModel_1.DrinkModel({
-            name: body.name,
-            size: body.size
-        });
-        try {
-            return data.save();
-        }
-        catch (error) {
-            return { error };
-        }
-    }
-};
-__decorate([
-    (0, tsoa_1.Post)("/create"),
-    __param(0, (0, tsoa_1.Body)()),
-    __metadata("design:type", Function),
-    __metadata("design:paramtypes", [Object]),
-    __metadata("design:returntype", Promise)
-], DrinkController.prototype, "create", null);
-DrinkController = __decorate([
-    (0, tsoa_1.Route)("api/drink")
-], DrinkController);
-exports.default = DrinkController;
